omnibor-cli/tests/snapshots/test__artifact_id_short.snap
---
source: omnibor-cli/tests/test.rs
info:
  program: omnibor
  args:
    - artifact
    - id
    - "--format"
    - short
    - "--path"
    - tests/data/main.c
---
success: true
exit_code: 0
----- stdout -----
gitoid:blob:sha256:93561f4501717b4c4a2f3eb5776f03231d32ec2a1f709a611ad3d8dcf931dc1b

----- stderr -----
